<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/textViewCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/montserrat_medium"
        android:letterSpacing="0.2"
        android:text="@string/lt_finance"
        android:textColor="@color/burnt_orange"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat_light"
        android:letterSpacing="0.1"
        android:text="@string/the_mortgage_platform_n_of_the_future"
        android:textColor="@color/smoke_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompany" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:letterSpacing="0.1"
            android:text="@string/welcome"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.1"
            android:text="@string/lt_finance_helps_you_calculate_nand_apply_for_mortgages_in_nover_100_banks"
            android:textAlignment="center"
            android:textColorHint="@color/dark_blue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/burnt_orange"
            android:fontFamily="@font/montserrat"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>